# usereport-rs

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.cross  README.md  TODO.md
.cargo/: deny.toml
.ci/: azure-pipelines.yml
.ci/templates/: install_dependencies.yml  install_rust.yml  restore_cargo_and_target.yml  save_cargo_and_target.yml  version_information.yml
.distribution/deb/: Makefile
.github/workflows/: ci.yml  release.yml
Formula/: usereport-rs.rb
contrib/: html.hbs  html.j2  linux.conf  markdown.hbs  markdown.j2  osx.conf
contrib/patterns/: lock_contention.toml  nfs_stall.toml  slab_leak.toml  socket_leak.toml  thundering_herd.toml  time_wait.toml
contrib/rules/: bpf.toml  cpu.toml  disk.toml  dmesg.toml  memory.toml  network.toml
contrib/rules/workloads/: java.toml  kubelet.toml  nginx.toml  postgres.toml
distribution/deb/: Makefile
distribution/deb/templates/DEBIAN/: control  postinst
docs/: linux-net-usereport.html
docs/schemas/: llm-output-v1.json
examples/: json_report.rs  md_report.rs
skills/usereport-analyze/: SKILL.md
skills/usereport-analyze/fixtures/good-box/: input.json  reference.md
skills/usereport-analyze/fixtures/io-bound/: input.json  reference.md
skills/usereport-analyze/fixtures/memory-pressure/: input.json  reference.md
skills/usereport-analyze/fixtures/thermal-throttle/: input.json  reference.md
skills/usereport-analyze/fixtures/time-wait-exhaustion/: input.json  reference.md
specs/done/sdd/: macos-compatibility.md  modernize-ux-ui.md  modernize-ux-ui.report.md  more-useful-firefight.md  product-review.md  product-review.report.md  version-2.md
specs/sdd/: macos-compatibility.report.md  modernize-ux-ui.md  more-useful-firefight.md  more-useful-firefight.report.md  product-review.md  version-2.md
src/: analysis.rs  command.rs  config.rs  diff.rs  extract.rs  finding.rs  lib.rs  llm.rs  redact.rs  renderer.rs  report.rs  report_context.rs  runner.rs  signal.rs  tests.rs
src/baseline/: mod.rs  stats.rs  store.rs
src/cli/: config.rs  mod.rs
src/collector/: bpf.rs  cgroup.rs  cpu.rs  cpufreq.rs  disk.rs  dmesg.rs  host.rs  interrupts.rs  memory.rs  mod.rs  network.rs
src/collector/platform/: linux.rs  macos.rs  mod.rs
src/pattern/: mod.rs
src/rule/: builtin.rs  mod.rs
src/workload/: mod.rs
tests/: builtin_rules.rs  exit_code_boundary.rs  osx_unsuccessful.conf  pattern_firing.rs  sdd_macos_compatibility_p1_c1_platform_types.rs  sdd_macos_compatibility_p2_c1_linux_platform.rs  sdd_macos_compatibility_p3_c1_macos_parsers.rs  sdd_macos_compatibility_p5_c1_snapshot_signals.rs  sdd_macos_compatibility_p6_c1_memory_collector.rs  sdd_modernize_ux_ui_p1_c4_file_output_no_ansi.rs  sdd_modernize_ux_ui_p2_c1_run_check_ok_green.rs  sdd_modernize_ux_ui_p2_c2_run_check_missing_red.rs  sdd_modernize_ux_ui_p2_c3_show_profiles_bold_header.rs  sdd_modernize_ux_ui_p3_c4_no_progress_flag.rs  sdd_modernize_ux_ui_p4_c1_bad_config_nonzero_exit.rs  sdd_modernize_ux_ui_p4_c2_valid_run_exit_zero.rs  sdd_modernize_ux_ui_p4_c3_no_anyhow_refs.rs  sdd_more_useful_firefight_p1_c1_linux_conf_install_hints.rs  sdd_more_useful_firefight_p1_c2_command_fields_deserialize.rs  sdd_more_useful_firefight_p1_c3_linux_conf_links.rs  sdd_more_useful_firefight_p1_c4_command_skips_none_fields.rs  sdd_more_useful_firefight_p1_c5_osx_conf_parses_ok.rs  sdd_more_useful_firefight_p1_c6_linux_conf_parses_ok.rs  sdd_more_useful_firefight_p2_c1_coverage_gaps_html.rs  sdd_more_useful_firefight_p2_c1_coverage_gaps_section.rs  sdd_more_useful_firefight_p2_c2_coverage_gaps_install_hint.rs  sdd_more_useful_firefight_p2_c2_coverage_gaps_install_hint_html.rs  sdd_more_useful_firefight_p2_c3_coverage_gaps_incomplete_notice.rs  sdd_more_useful_firefight_p2_c3_coverage_gaps_incomplete_notice_html.rs  sdd_more_useful_firefight_p2_c4_rule_engine_checked_ok.rs  sdd_more_useful_firefight_p2_c5_rule_engine_fired_not_checked_ok.rs  sdd_more_useful_firefight_p2_c6_healthy_section.rs  sdd_more_useful_firefight_p2_c6_healthy_section_html.rs  sdd_more_useful_firefight_p2_c7_threshold_column.rs  sdd_more_useful_firefight_p2_c7_threshold_column_html.rs  sdd_more_useful_firefight_p3_c1_source_commands_in_evidence.rs  sdd_more_useful_firefight_p3_c2_html_evidence_href.rs  sdd_more_useful_firefight_p3_c3_html_command_id.rs  sdd_more_useful_firefight_p3_c4_html_evidence_before_details.rs  sdd_more_useful_firefight_p3_c4_html_evidence_commands_before_details.rs  (+54 more)
