[package]
name = "usereport-rs"
version = "0.1.4"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Collect system information for the first 60 seconds of a performance analysis"
repository = "https://github.com/lukaspustina/usereport-rs.git"
documentation = "https://github.com/lukaspustina/usereport-rs.git"
readme = "README.md"
license = "MIT"
keywords = ["performance", "analysis", "sre"]
categories = ["command-line-utilities" ]
include = [
  "README.md",
  "LICENSE",
  "contrib/*.hbs",
  "contrib/*.conf",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2018"
rust-version = "1.74"

[badges]

[features]
bin = ["clap", "comfy-table", "env_logger", "anyhow", "human-panic", "indicatif"]

[[bin]]
name = "usereport"
path = "src/bin/usereport.rs"
doc = false
required-features = ["bin"]

[lib]
name = "usereport"
path = "src/lib.rs"

[[example]]
name = "json_report"
required-features = ["bin"]

[[example]]
name = "md_report"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
handlebars = "2.0"
human-panic = { version = "2", optional = true }
indicatif = { version = "0.17", optional = true }
log = "0.4"
comfy-table = { version = "7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1"
thiserror = "2"
subprocess = "0.2"
tempfile = "3"
toml = "0.8"
rustix = { version = "1", features = ["system"] }

[dev-dependencies]
env_logger = "0.11"
spectral = "0.6"

