[package]
name = "usereport-rs"
version = "0.2.1"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "System performance analysis and reporting CLI"
repository = "https://github.com/lukaspustina/usereport-rs.git"
homepage = "https://github.com/lukaspustina/usereport-rs"
documentation = "https://docs.rs/usereport-rs"
readme = "README.md"
license = "MIT"
keywords = ["performance", "analysis", "sre"]
categories = ["command-line-utilities" ]
include = [
  "README.md",
  "LICENSE",
  "contrib/*.j2",
  "contrib/*.conf",
  "contrib/rules/**/*.toml",
  "contrib/patterns/**/*.toml",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2024"
rust-version = "1.85"

[badges]

[features]
bin = ["clap", "comfy-table", "env_logger", "miette", "human-panic", "indicatif", "humantime", "inferno", "termimad", "owo-colors"]
bpf = []

[[bin]]
name = "usereport"
path = "src/bin/usereport.rs"
doc = false
required-features = ["bin"]

[lib]
name = "usereport"
path = "src/lib.rs"

[[example]]
name = "json_report"
required-features = ["bin"]

[[example]]
name = "md_report"
required-features = ["bin"]

[dependencies]
miette = { version = "7", features = ["fancy"], optional = true }
humantime = { version = "2", optional = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "color"], optional = true }
env_logger = { version = "0.11", optional = true }
minijinja = "2"
human-panic = { version = "2", optional = true }
indicatif = { version = "0.18", optional = true }
log = "0.4"
comfy-table = { version = "7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
thiserror = "2"
subprocess = "0.2"
tempfile = "3"
toml = "1"
winnow = "1"
hmac = "0.12"
regex = "1"
rustix = { version = "1", features = ["system", "fs"] }
sha2 = "0.10"
which = "8"
inferno = { version = "0.12", optional = true }
termimad = { version = "0.34", optional = true }
owo-colors = { version = "4", optional = true }

[dev-dependencies]
env_logger = "0.11"
googletest = "0.14"

# ── Release ──────────────────────────────────────────────────────────────────

# The profile that 'cargo dist' will build with.
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
# Single-crate workspace declaration — required by cargo-dist.

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
targets = [
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "aarch64-apple-darwin",
]
features = ["bin"]      # binary requires --features bin to compile
installers = ["shell", "homebrew"]
tap = "lukaspustina/usereport-rs"
publish-jobs = ["homebrew"]
allow-dirty = ["ci"]

[workspace.metadata.dist.github-custom-runners]
# Native arm64 runner — avoids cross/Docker for the aarch64-musl build.
aarch64-unknown-linux-musl = "ubuntu-24.04-arm"

